@@ -1,3 +1,4 @@
+Enable DHCP_INFORM support via the -S option (requires -s ipaddr too)
 Use the DUID stored to create an RFC 4361 conformant client identifier
 if none is specified instead of just using the MAC address.
 Create a DUID-LLT according to RFC 3315 and store it in peristent file.
